# ChangeLog for dev-tex/circuit_macros
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-tex/circuit_macros/ChangeLog,v 1.5 2013/11/04 19:38:28 calchan Exp $

  04 Nov 2013; Denis Dupeyron <calchan@gentoo.org> -circuit_macros-7.5.ebuild,
  -circuit_macros-7.6.ebuild, -circuit_macros-7.7.ebuild, -files/CM2pdf:
  Cleanup old versions.

*circuit_macros-7.7-r1 (04 Nov 2013)

  04 Nov 2013; Denis Dupeyron <calchan@gentoo.org>
  +circuit_macros-7.7-r1.ebuild, +files/cm2pdf, metadata.xml:
  Change CM2pdf into cm2pdf. Add variable font size and a --help option.

*circuit_macros-7.7 (29 Oct 2013)

  29 Oct 2013; Denis Dupeyron <calchan@gentoo.org> +circuit_macros-7.7.ebuild:
  Version bump.

*circuit_macros-7.6 (04 Jul 2013)

  04 Jul 2013; Denis Dupeyron <calchan@gentoo.org> +circuit_macros-7.6.ebuild:
  Version bump.

*circuit_macros-7.5 (11 Jun 2013)

  11 Jun 2013; Denis Dupeyron <calchan@gentoo.org> +circuit_macros-7.5.ebuild,
  +files/CM2pdf, +metadata.xml:
  Initial commit.
