@@ -1,5 +1,7 @@
 AUX cm2pdf 1476 SHA256 1baa6c18eaffdd13f8e93dc07c62a97c47a39e308c0d070dbb37c14025a11c19 SHA512 37db7d2a66bace8666b89169be96b1ecf27f5f6d0f46c16a2f42be75490c4d0b4b89e27631b7e4e8684bbc07176f219ff8cb16987e47d5cb1b0c6cc0973b15f1 WHIRLPOOL 2feb584f7894feaf0669c410b93f4483e12f231c8e78a3ee296e7d8c2154d08bf0c4e95bf5ee3df980c07faf16c8017996216d1fdc6e5e1507b9cce8a0fc4669
+DIST circuit_macros-7.7.1.zip 1335480 SHA256 c62c416b01c1de2b5969dfa9bb96a2b375e7e32c3a90b2376d04ae9d2dde3568 SHA512 2434a36dc03196af7d7ccca81e0e84926a51a626d89f6889fef9358cc6dd1c2237251a0f8f060a8e95b8a6e42a51166592436c3c749525fec35370d94e6786ae WHIRLPOOL 18b6a39a6ec0be1a5c5605f98fa42acce9ed66203e331bd394420dc492d3c8a4080f3cf90188219c3e07efc6712074de2b3ad59791f669e33e944e55b7567bde
 DIST circuit_macros-7.7.zip 1335480 SHA256 c62c416b01c1de2b5969dfa9bb96a2b375e7e32c3a90b2376d04ae9d2dde3568 SHA512 2434a36dc03196af7d7ccca81e0e84926a51a626d89f6889fef9358cc6dd1c2237251a0f8f060a8e95b8a6e42a51166592436c3c749525fec35370d94e6786ae WHIRLPOOL 18b6a39a6ec0be1a5c5605f98fa42acce9ed66203e331bd394420dc492d3c8a4080f3cf90188219c3e07efc6712074de2b3ad59791f669e33e944e55b7567bde
 EBUILD circuit_macros-7.7-r1.ebuild 1387 SHA256 d474ba87a3859cdeef441aad9eea5bc535362262794105b76edfebf9c60cfced SHA512 237ec56c1f92c3edc40fb169d9e1ef4f256e6120965376199cc4ddc6c8c8c0f1768c10b62c39b4212acc6f1898488c39d2ba3e29b96f3cabf6e25c60d56d76fc WHIRLPOOL ce3a84f57a3a678ee866971194887e3c160493e559e27a9c86cd036061cb285e9ad47b06e5f3a0822a4776ecc91f9c4b03f4b7be911b79be4aa6cef73e6b2cd3
-MISC ChangeLog 1047 SHA256 771802bbd249b04331fcace6c9ef4590f502a71d98aa4494874e5fa27635c0e2 SHA512 63614ac009f753923782c26e122e50b94c35382d8ad429db360b7a3882f2830fa2e20d1735808d2844bd0c8470dacaee985c3494ff6f3b21760e3a1bf7b2ae5f WHIRLPOOL 101fa9a2c4e941268a1eabd838077156eb907d819aab20abac572cf6735ab9e0e48f7b63bbef3ad7898e8f69b6c470da44cf7c370c19316ad9789a1df8196d92
+EBUILD circuit_macros-7.7.1.ebuild 1386 SHA256 490e22f7a3426d166fba6b24a65682bb9091391fa5f682da6c1450dd28b2f633 SHA512 ebf5bc6ac7f8bb58b19a14c54b02120c7a8d885d22c2c803520267e538999894ab2b821714ba8d48d0e5066de5a4bffdc355fb4fd6c28289f3487135cdc71fcf WHIRLPOOL b3a200dfe8d4263e230ce40492b271e2fccbb2cf0ec50a3b9ada19f7e36aa0edf79efd3a3903c1886cbcc9552929a213d73ed5f0a4e81c00e9114d0fed850b1b
+MISC ChangeLog 1184 SHA256 68b4ad9bddd4f437ecc06db61b7dedc802f93a5cd27a448c6bf6476023a08a72 SHA512 f5a8c2a19ca848b692013661d7788945c0594669731aa34b21d3807c0e668c0a8d95c02b66d7cd5db705feb7bc1cf10762dd1116a13c94693b747f9499c6ca0e WHIRLPOOL 2188879f99405ee06ef045a6923000569070113f7fcda60b0a67de578017dd428bb76f88b03be57521bcc4dd80ef0259df7f58f492998aa16a63ad6b182332b7
 MISC metadata.xml 657 SHA256 de3d64982083fcddcf887f6f89b46505c77abe4e2933df8c17e646daceef7836 SHA512 d549f39d36348fa8792e8bc1eadeb4da19540bd949f1a725bd5bb29bf2f901a7c1ed17de52f5de4f46f9fa0a27b91cd69cdf93f7a887284f9491ebc5dbe11b5f WHIRLPOOL 824f4c9135e2754425bf8012be8379ced4027b1785b1f546d62b88fbc04f324de0240e5c399146edb9f65d9d615f8a120691a7b523ab7dc0f7e8630455d22d91
