@@ -1,6 +1,12 @@
 # ChangeLog for dev-tex/circuit_macros
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tex/circuit_macros/ChangeLog,v 1.5 2013/11/04 19:38:28 calchan Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-tex/circuit_macros/ChangeLog,v 1.6 2013/11/19 16:34:00 calchan Exp $
+
+*circuit_macros-7.7.1 (19 Nov 2013)
+
+  19 Nov 2013; Denis Dupeyron <calchan@gentoo.org>
+  +circuit_macros-7.7.1.ebuild:
+  Version bump.
 
   04 Nov 2013; Denis Dupeyron <calchan@gentoo.org> -circuit_macros-7.5.ebuild,
   -circuit_macros-7.6.ebuild, -circuit_macros-7.7.ebuild, -files/CM2pdf:
